Applied margin to buttons and added clearfix to navigation to stop text overlapping the border when a lot of pages are included.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -728,6 +728,10 @@ body {
         margin-right: 10px;
     }
 
+    .widget.tweet a, .widget.button .btn {
+        margin: 1em 0;
+    }
+
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
